--- a/build.gradle
+++ b/build.gradle
@@ -73,11 +73,8 @@ allprojects {
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
 		annotationProcessor 'org.projectlombok:lombok'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	}
-
-	tasks.named('test') {
-		outputs.dir snippetsDir
-		useJUnitPlatform()
+		implementation group: 'javax.inject', name: 'javax.inject', version: '1'
+		implementation 'org.apache.commons:commons-lang3:3.12.0'
 	}
 
 	tasks.named('compileJava') {
