--- a/common/build.gradle
+++ b/common/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.2.15'
 }
 
 dependencyManagement {
